# SieveOfEratosthenes

./: CMakeLists.txt  README.md  sieve.c  sieve_noeven.c
